# Maryema

./: README.md
maryema_api/: .env.dist  .flake8  README.md  env.dist  maryema_db.dbml  openapi.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py
maryema_api/cart/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
maryema_api/cart/migrations/: 0001_initial.py  0002_alter_cart_user.py  0002_initial.py  0003_alter_cart_options_rename_user_cart_profile_and_more.py  0003_alter_cartitem_cart.py  0004_alter_cartitem_cart.py  0004_alter_cartitem_quantity.py  0005_cartitem_unique_cart_item.py  (+2 more)
maryema_api/core/: drf_yasg.py  models.py  permissions.py  settings.py  urls.py  utils.py
maryema_api/discount/: admin.py  models.py
maryema_api/discounts/: admin.py  models.py  serializers.py
maryema_api/feedback/: models.py  serializers.py  tests.py  views.py
maryema_api/feedbacks/: models.py  serializers.py  views.py
maryema_api/order/: apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
maryema_api/orders/: admin.py  models.py  serializers.py  views.py
maryema_api/product/: admin.py  filters.py  permissions.py  serializers.py  urls.py  views.py
maryema_api/products/: admin.py  models.py  serializers.py  views.py
maryema_api/profile/: models.py  serializers.py  tests.py  urls.py  views.py
maryema_api/stock/: admin.py  models.py  serializers.py  views.py
maryema_api/users/: models.py  serializers.py  servecies.py  signals.py  urls.py  views.py
(+132 files in other folders)
