[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maryema"
version = "0.1.0"
description = "A small clothing store project"
authors = [
    { name = "Ibrahim Morad", email = "ibrahimmorad31@gmail.com" },
]
readme = "README.md"
license = "MIT"
dependencies = [
    "django>=5.1.2",
    "pillow>=11.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]
urls = { "Repository" = "https://github.com/ibrahimmurad/maryema" }

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88